<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/calendarFragment">

    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.calenpen.ui.calendar.CalendarFragment"
        android:label="@string/nav_calendar" />

    <fragment
        android:id="@+id/notesListFragment"
        android:name="com.calenpen.ui.notes.NotesListFragment"
        android:label="@string/nav_notes" />

    <fragment
        android:id="@+id/templatesFragment"
        android:name="com.calenpen.ui.templates.TemplatesFragment"
        android:label="@string/nav_templates" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.calenpen.ui.search.SearchFragment"
        android:label="@string/nav_search" />

</navigation>
